# rime_wanxiang_updater

./: .gitignore  Cargo.toml  ReadMe.md  config.txt  example.json  rime-update.py  updater_conf.ini
res/: updater_conf.ini
src/: config_read.rs  file_checker.rs  github_api.rs  main.rs  path_get.rs  types.rs  update_checker.rs  url_utils.rs  version_choose.rs
src/update_checker/: core.rs  file_operations.rs  github_client.rs  mod.rs  weasel_manager.rs
