[package]
name = "rime_wanxiang_updater"
version = "1.0.1"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "rime_wanxiang_updater"
path = "src/main.rs"

[dependencies]
rust-embed = { version = "8.7.2", features = ["compression"] }
single-instance = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rust-ini = "0.21.2"
